Almost finished converting to the new API.